Fix overflow repos w word-wrap /  Add body height=webkit-fill-available / Cancel nav borders except bottom

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,7 @@
 
 body {
   background-color: #f3f3f3;
+  height: -webkit-fill-available;
 }
 
 .borders-container {
